acvus-mir-test/tests/snapshots/e2e__iter_tuple_destructure.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 410
expression: ir
---
=== main ===
     0 │   r0 = storage_load $pairs
     1 │   r1 = iter_init r0
     2 │ L0:
     3 │   r2, r3 = iter_next r1
     4 │   jump_if r3 then L1 else L3
     5 │ L3:
     6 │   r4 = r2.0
     7 │   emit r4
     8 │   jump L0
     9 │ L1:
    10 │ L2:

    ; r0 ($pairs) : List<(String, Int)>
    ; r1 (v1) : Unit
    ; r2 (v2) : Unit
    ; r3 (v3) : Bool
    ; r4 (a) : Unit
