acvus-mir-test/tests/snapshots/e2e__iter_with_catch_all.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "empty"

=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @items
     2 │   r2 = load r1
     4 │   r3 = ref @items
     7 │   jump L0(0 (r4), T0, r0)
     8 │ L0(r5: Int, r6: String, r7: Int):
     9 │   list_step r8, r9 = r2[r5] else L1(r6)
    10 │ L3:
    12 │   r10 = call #0(r8)
    13 │   r11 = T0 + r10
    14 │   r12 = r6 + r11
    15 │   jump L0(r9, r12, r8)
    16 │ L1(r13: String):
    19 │   r14 = T0 + T1
    20 │   r15 = r13 + r14
    21 │   jump L2(r15)
    22 │ L2(r16: String):
    23 │   r17 = T0 + r16
    24 │   return r17

    ; r0 (v27) : Int
    ; r1 (@items) : Ref<List<Int>>
    ; r2 (@items) : List<Int>
    ; r3 (@items) : Ref<List<Int>>
    ; r4 (v6) : Int
    ; r5 (v8) : Int
    ; r6 (v9) : String
    ; r7 (v28) : Int
    ; r8 (x) : Int
    ; r9 (v11) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v18) : String
    ; r12 (v19) : String
    ; r13 (v20) : String
    ; r14 (v23) : String
    ; r15 (v24) : String
    ; r16 (v25) : String
    ; r17 (v26) : String
    ; r18 (v22) : String
    ; r19 (v3) : String
    ; r20 (v14) : String
    ; r21 (v15) : Ref<Int>
    ; r22 (v7) : String
    ; r23 (v21) : String
    ; r24 (v13) : Ref<Int>
    ; r25 (v5) : List<Int>
    ; r26 (x) : Int
