acvus-mir-test/tests/snapshots/e2e__iteration_over_list.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = context_project @users
     2 │   r2 = context_load r1
     6 │   jump L0(0 (r3), T0, r0)
     7 │ L0(r4: Int, r5: String, r6: String):
     8 │   list_step r7, r8 = r2[r4] else L1(r5)
     9 │ L3:
    10 │   r9 = r7.name
    12 │   r10 = T0 + r9
    13 │   r11 = r5 + r10
    14 │   jump L0(r8, r11, r9)
    15 │ L1(r12: String):
    16 │   jump L2(r12)
    17 │ L2(r13: String):
    18 │   r14 = T0 + r13
    19 │   return r14

    ; r0 (v20) : String
    ; r1 (@users) : List<{age: Int, name: String}>
    ; r2 (v2) : List<{age: Int, name: String}>
    ; r3 (v6) : Int
    ; r4 (v8) : Int
    ; r5 (v9) : String
    ; r6 (v21) : String
    ; r7 (v10) : {age: Int, name: String}
    ; r8 (v11) : Int
    ; r9 (name) : String
    ; r10 (v15) : String
    ; r11 (v16) : String
    ; r12 (v17) : String
    ; r13 (v18) : String
    ; r14 (v19) : String
    ; r15 (v3) : String
    ; r16 (name) : String
    ; r17 (v7) : String
    ; r18 (v5) : List<{age: Int, name: String}>
    ; r19 (v13) : String
    ; r20 (@users) : List<{age: Int, name: String}>
