acvus-mir-test/tests/snapshots/e2e__lambda_capture_local_storage_ref.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = const 10
     1 │   storage_store $offset = r0
     2 │   r1 = storage_load $items
     3 │   r2 = closure L0 []
     4 │   r3 = call filter(r1, r2)
     5 │   r4 = call to_string(r3)
     6 │   emit r4

    ; r0 (v0) : Int
    ; r1 ($items) : List<Int>
    ; r2 (v2) : Fn(Int) -> Bool
    ; r3 (filter(...)) : List<Int>
    ; r4 (to_string(...)) : String

=== closure L0 (i) ===
     0 │   r1 = storage_load $offset
     1 │   r2 = r0 > r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 ($offset) : Int
    ; r2 (v2) : Bool
