acvus-mir-test/tests/snapshots/e2e__lambda_capture_local_var_ref.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     4 │   var_store $offset = 10 (r2)
     6 │   r3 = T0 + T0
     7 │   r4 = poison
     8 │   r5 = closure L0 []
     9 │   r6 = poison
    10 │   r7 = poison
    12 │   r8 = r3 + T0
    13 │   r9 = poison
    14 │   r10 = poison
    15 │   r11 = r8 + r10
    16 │   return r11

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r12 (v2) : String
    ; r2 (v3) : Int
    ; r13 (v4) : String
    ; r3 (v5) : String
    ; r14 (@items) : List<Int>
    ; r15 (v7) : List<Int>
    ; r4 (iter(...)) : Iterator<Int>
    ; r5 (v9) : Fn(Int) -> Bool
    ; r6 (filter(...)) : Iterator<Int>
    ; r7 (collect(...)) : List<Int>
    ; r16 (v12) : String
    ; r8 (v13) : String
    ; r9 (len(...)) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v16) : String

=== closure L0 (ValueId(0)) ===
     0 │   r0 = var_load $offset
     1 │   r1 = r2 > r0
     2 │   return r1

    ; r2 (v0) : Int
    ; r0 ($offset) : Int
    ; r1 (v2) : Bool
