acvus-mir-test/tests/snapshots/e2e__lambda_chained_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = context_load @users
     1 │   r1 = closure L0 []
     2 │   r2 = call map(r0, r1)
     3 │   r3 = const ","
     4 │   r4 = call join(r2, r3)
     5 │   emit r4

    ; r0 (@users) : List<{address: {city: String}}>
    ; r1 (v1) : Fn({address: {city: String}}) -> String
    ; r2 (map(...)) : List<String>
    ; r3 (v3) : String
    ; r4 (join(...)) : String

=== closure L0 (u) ===
     0 │   r1 = r0.address
     1 │   r2 = r1.city
     2 │   return r2

    ; r0 (v0) : {address: {city: String}}
    ; r1 (address) : {city: String}
    ; r2 (city) : String
