acvus-mir-test/tests/snapshots/e2e__lambda_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","

=== main ===
     0 │   r0 = context_project @users
     1 │   r1 = context_load r0
     3 │   r2 = poison
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     7 │   r5 = T0 + T0
     9 │   r6 = poison
    10 │   r7 = r5 + r6
    11 │   return r7

    ; r0 (@users) : <error>
    ; r1 (v1) : List<{age: Int, name: String}>
    ; r8 (v2) : String
    ; r9 (@users) : List<{age: Int, name: String}>
    ; r10 (v4) : List<{age: Int, name: String}>
    ; r2 (iter(...)) : Iterator<{age: Int, name: String}>
    ; r3 (v6) : Fn({age: Int, name: String}) -> String
    ; r4 (map(...)) : Iterator<String>
    ; r11 (v8) : String
    ; r5 (v9) : String
    ; r12 (v10) : String
    ; r6 (join(...)) : String
    ; r7 (v12) : String

=== closure L0 (ValueId(0)) ===
     0 │   r0 = r1.name
     1 │   return r0

    ; r1 (v0) : {age: Int, name: String}
    ; r0 (name) : String
