acvus-mir-test/tests/snapshots/e2e__lambda_float_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @vals
     1 │   r1 = context_load r0
     3 │   r2 = poison
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     6 │   r5 = poison
     8 │   r6 = T0 + T0
     9 │   r7 = poison
    10 │   r8 = poison
    11 │   r9 = r6 + r8
    12 │   return r9

    ; r0 (@vals) : <error>
    ; r1 (v1) : List<Float>
    ; r10 (v2) : String
    ; r11 (@vals) : List<Float>
    ; r12 (v4) : List<Float>
    ; r2 (iter(...)) : Iterator<Float>
    ; r3 (v6) : Fn(Float) -> Float
    ; r4 (map(...)) : Iterator<Float>
    ; r5 (collect(...)) : List<Float>
    ; r13 (v9) : String
    ; r6 (v10) : String
    ; r7 (len(...)) : Int
    ; r8 (to_string(...)) : String
    ; r9 (v13) : String

=== closure L0 (ValueId(0)) ===
     1 │   r0 = r1 * 2.0 (r2)
     2 │   return r0

    ; r1 (v0) : Float
    ; r2 (v1) : Float
    ; r0 (v2) : Float
